Fix checkbox and readio vertical alignment
Closes #241

--- a/site/css/theme.css
+++ b/site/css/theme.css
@@ -1,13 +1,3 @@
-body { margin: 0; }
-
-* { box-sizing: border-box; }
-
-[class^='docs-'] {
-  font-family: "Open Sans";
-  color: rgba(0,0,0,.75);
-  line-height: 1.5;
-}
-
 [class^='docs-heading-title-'] {
   padding-top: 40px;
 }
